# zephyr-project

ML-folder/speech-recognition/: X_train_audio.npy  audio_classification_cpu.keras  best_audio_model_cpu.h5  convert-audiomodel-cmsis-nn.py  model.h  quantized_audio_model.tflite  sp-model.py  speech-gen.txt  split_audio_file.py
audio/: CMakeLists.txt  prj.conf
audio/board/: stm32f746g_disco.conf  stm32f746g_disco.overlay
audio/boards/: stm32f746g_disco.conf  stm32f746g_disco.overlay
audio/src/: main.c
modules/dts/bindings/: st,stm32-sai.yaml
modules/say_hello/: CMakeLists.txt  Kconfig  say_hello.c  say_hello.h
modules/say_hello/zephyr/: module.yaml
modules/stm32f746_disco_sai/: CMakeLists.txt  Kconfig  design_note.txt  i2s_sai_ll_stm32.c  i2s_sai_ll_stm32.h  stm32_dai.c  stm32_dai.h  stm32_ll_sai.c  stm32_ll_sai.h  zephyr-project.code-workspace
modules/stm32f746_disco_sai/dts/bindings/: st,stm32-sai.yaml
modules/stm32f746_disco_sai/zephyr/: module.yaml
randomgenerator/board/: stm32f746g_disco.conf
randomgenerator/src/: main.c
toggleLEDGPIO/: CMakeLists.txt
toggleLEDGPIO/src/: main.c
